--- a/index.html
+++ b/index.html
@@ -501,6 +501,7 @@
     <!--Footer-->
     <footer class="page-footer">
       <div class="container">
+
       <div class="footer-logo-wrapper">
         <a class="logo footer-logo" href="./index.html"
           >Web<span class="logo-part">Studio</span>
@@ -543,7 +544,85 @@
           </li>
         </ul>
         </div>
+
+        <!--Subscribe form-->
+<div class="footer-subscribe">
+  <p class="footer-title">Subscribe</p>
+  <form class="subscribe-form" name="subscribe">
+    <label class="subscribe-label">
+      <input class="subscribe-input" type="email" name="email" placeholder="E-mail" required />
+    </label>
+    <button class="subscribe-button" type="submit">Subscribe
+      <svg class="subscribe-icon" width="24" height="20">
+        <use href="./images/icons.svg#icon-send"></use>
+      </svg>
+    </button>
+  </form>
+</div>
       </div>
     </footer>
+
+    <!--Modal-->
+
+    <div class="backdrop" id="modal-backdrop">
+      <div class="modal">
+        <button type="button" class="modal-close" aria-label="Close modal">
+          <svg class="icon-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+
+        <form class="modal-form">
+          <label class="form-field">
+            <span class="form-label">Name</span>
+            <div class="form-input-wrapper">
+              <input type="text" name="user-name" class="form-input" placeholder="Your name" required />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </label>
+
+          <label class="form-field">
+            <span class="form-label">Phone</span>
+            <div class="form-input-wrapper">
+              <input type="tel" name="user-phone" class="form-input" placeholder="+38..." required />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </label>
+           
+          <label class="form-field">
+            <span class="form-label">Email</span>
+            <div class="form-input-wrapper">
+              <input type="email" name="user-email" class="form-input" placeholder="email@example.com" required />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </label>
+
+          <label class="form-field comment-field">
+            <span class="form-label">Comment</span>
+            <textarea name="user-comment" class="form-textarea" placeholder="Text input"></textarea>
+          </label>
+
+          <label class="form-agreement">
+            <input type="checkbox" name="user-consent" class="visually-hidden" required />
+            <span class="custom-checkbox">
+              <svg class="check-icon" width="10" height="8">
+                <use href="./images/icons.svg#icon-check"></use>
+              </svg>
+            </span>
+            I accept the terms and conditions of the <a href="#">Privacy Policy</a> 
+          </label>
+
+          <button type="submit" class="form-submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
