--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
       <input class="subscribe-input" type="email" name="email" placeholder="E-mail" required />
     </label>
     <button class="subscribe-button" type="submit">Subscribe
-      <svg class="subscribe-icon" width="24" height="20">
+      <svg class="subscribe-icon" width="24" height="24">
         <use href="./images/icons.svg#icon-send"></use>
       </svg>
     </button>
@@ -564,63 +564,66 @@
 
     <!--Modal-->
 
-    <div class="backdrop" id="modal-backdrop">
+    <div class="backdrop is-open" id="modal-backdrop">
       <div class="modal">
         <button type="button" class="modal-close" aria-label="Close modal">
           <svg class="icon-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-
+                     <!--Заголовок-->        
         <p class="modal-title">Leave your contacts and we will call you back</p>
-
+                      <!--Форма-->
         <form class="modal-form">
-          <label class="form-field">
-            <span class="form-label">Name</span>
+                      <!--Name-->
+          <div class="form-field">
+            <label for="user-name" class="form-label">Name</label>
             <div class="form-input-wrapper">
-              <input type="text" name="user-name" class="form-input" placeholder="Your name" required />
-              <svg class="form-icon" width="18" height="18">
+              <input type="text" id="user-name" name="user-name" class="form-input" />
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
-          </label>
-
-          <label class="form-field">
-            <span class="form-label">Phone</span>
+          </div>
+                  <!--Phone-->
+          <div class="form-field">
+            <label for="user-phone" class="form-label">Phone</label>
             <div class="form-input-wrapper">
-              <input type="tel" name="user-phone" class="form-input" placeholder="+38..." required />
+              <input type="tel" id="user-phone" name="user-phone" class="form-input" />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
-          </label>
-           
-          <label class="form-field">
-            <span class="form-label">Email</span>
+          </div>
+               <!--Email-->
+          <div class="form-field">
+            <label for="user-email" class="form-label">Email</label>
             <div class="form-input-wrapper">
-              <input type="email" name="user-email" class="form-input" placeholder="email@example.com" required />
+              <input type="email" id="user-email" name="user-email" class="form-input" />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
-          </label>
-
-          <label class="form-field comment-field">
-            <span class="form-label">Comment</span>
-            <textarea name="user-comment" class="form-textarea" placeholder="Text input"></textarea>
-          </label>
-
-          <label class="form-agreement">
-            <input type="checkbox" name="user-consent" class="visually-hidden" required />
-            <span class="custom-checkbox">
+          </div>
+                  <!--Comment-->
+          <div class="form-field">
+            <label for="user-comment" class="form-label">Comment</label>
+            <textarea id="user-comment" name="user-comment" class="form-textarea" placeholder="Text input"></textarea>
+          </div>
+                   <!--Chekbox-->
+          <div class="form-checkbox-wrapper">
+            <input type="checkbox" id="user-privacy" name="user-privacy" class="form-checkbox visually-hidden" />
+            <label for="user-privacy" class="form-checkbox-label">
+              <span class="custom-checkbox"> 
               <svg class="check-icon" width="10" height="8">
                 <use href="./images/icons.svg#icon-check"></use>
               </svg>
-            </span>
-            I accept the terms and conditions of the <a href="#">Privacy Policy</a> 
-          </label>
-
-          <button type="submit" class="form-submit">Send</button>
+              </span>
+            I accept the terms and conditions of the <a href="#" class="form-policy-link">Privacy Policy</a> 
+            </label>
+          </div>
+                 <!--Submit-->
+          <button type="submit" class="form-submit-btn">Send</button>
         </form>
       </div>
     </div>
