--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
           </div>
                    <!--Chekbox-->
           <div class="form-checkbox-wrapper">
-            <input type="checkbox" id="user-privacy" name="user-privacy" class="form-checkbox visually-hidden" />
+            <input type="checkbox" id="user-privacy" name="user-privacy" class="form-checkbox visually-hidden" value="true" />
             <label for="user-privacy" class="form-checkbox-label">
               <span class="custom-checkbox"> 
               <svg class="check-icon" width="10" height="8">
